--- a/Carting/Carting.API/Carting.API.csproj
+++ b/Carting/Carting.API/Carting.API.csproj
@@ -7,12 +7,9 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="AutoMapper" Version="11.0.1" />
+    <PackageReference Include="LiteDB" Version="5.0.12" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.2.3" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <ProjectReference Include="..\Carting.Application\Carting.Application.csproj" />
-    <ProjectReference Include="..\Carting.Infrastructure\Carting.Infrastructure.csproj" />
   </ItemGroup>
 
 </Project>
